--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <body>
 
         <h1>Main repo</h1>
+        <h2>and here are the changes for the navbar branch!</h2>
         
         <script src="scripts.js" async defer></script>
     </body>
