--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
 
         <h1>Main repo</h1>
-        <h2>and hsdfereh!seeres </h2>
+        <h2> sdfand navbarrfrrrrhsdfesdfsdfreh!sesdffsdffmainnneressdfsdfsd navabrrrr </h2>
         
         <script src="scripts.js" async defer></script>
     </body>
