Added yet another h3 tag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <h1>Main repo</h1>
         <h2> sdfand navbarrfrrrrhsdfesdfsdfreh!sesdffsdffmainnneressdfsdfsd navabrrrr </h2>
-        
+        <h3> Yet another H3 tag yesss</h3>
         <script src="scripts.js" async defer></script>
     </body>
 </html>
